RESOLVED FIXED12308
REGRESSION(r18910): Crash in WebBaseNetscapePluginStream cancelLoadAndDestroyStreamWithError
https://bugs.webkit.org/show_bug.cgi?id=12308
Summary REGRESSION(r18910): Crash in WebBaseNetscapePluginStream cancelLoadAndDestroy...
Kevin M. Dean
Reported 2007-01-17 19:43:33 PST
The above url loads and crashes. The same happens with this different profile. Works fine in Safari. http://profile.myspace.com/index.cfm?fuseaction=user.viewprofile&friendid=42270288
Attachments
Crash log (60.95 KB, text/plain)
2007-01-17 19:44 PST, Kevin M. Dean
no flags
Kevin M. Dean
Comment 1 2007-01-17 19:44:07 PST
Created attachment 12525 [details] Crash log
Matt Lilek
Comment 2 2007-01-17 20:07:51 PST
I get the following printed to the console on a debug build of r18920: objc: FREED(id): message destroyStreamWithError: sent to freed object=0x727c9d0 Betting this is the cause http://trac.webkit.org/projects/webkit/changeset/18910
David Kilzer (:ddkilzer)
Comment 3 2007-01-18 09:03:23 PST
*** Bug 12312 has been marked as a duplicate of this bug. ***
Matt Lilek
Comment 4 2007-01-18 13:03:19 PST
*** Bug 12323 has been marked as a duplicate of this bug. ***
David Kilzer (:ddkilzer)
Comment 5 2007-01-19 04:43:44 PST
This happens all the time when accessing Yahoo! Mail (when the profile character is drawn in Flash).
Anders Carlsson
Comment 6 2007-01-19 15:36:23 PST
Committed revision 18992.
Note You need to log in before you can comment on or make changes to this bug.