        Reviewed by John Sullivan.

http://bugs.webkit.org/show_bug.cgi?id=12308
        REGRESSION(r18910): Crash in WebBaseNetscapePluginStream cancelLoadAndDestroyStreamWithError

        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView initWithFrame:pluginPackage:URL:baseURL:MIMEType:attributeKeys:attributeValues:loadManually:DOMElement:]):
        Move code from initWithFrame in here.



Canonical link: https://commits.webkit.org/15970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18992 268f45cc-cd09-0410-ab3c-d52691b4dbfc